Fix baseURL port, lower deployment target, clean up CI and gitattributes
- Add :8080 to baseURL so REST API requests reach the ESP32 web server
  instead of the HomeSpan HAP server on port 80
- Lower IPHONEOS_DEPLOYMENT_TARGET from 26.2 to 17.0 to match
  documented minimum and broaden device compatibility
- Remove no-op *.xcassets binary line from .gitattributes (xcassets are
  directories, not files — the glob never matches)
- Add comment to CI workflow explaining why it uses iPhone 16 Pro
  (macos-15 runners ship Xcode 16.x) vs local iPhone 17 Pro

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,8 @@ on:
 
 jobs:
   build-and-test:
+    # macos-15 runners ship Xcode 16.x with iPhone 16 simulators;
+    # local dev uses iPhone 17 Pro (Xcode 17 / macOS 26)
     runs-on: macos-15
 
     steps:
