--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build-and-test:
-    # macos-15 runners ship Xcode 16.x with iPhone 16 simulators;
+    # macos-15 runners ship Xcode 16.4 with iPhone 16 simulators;
     # local dev uses iPhone 17 Pro (Xcode 17 / macOS 26)
     runs-on: macos-15
 
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Select Xcode
-        run: sudo xcode-select -s /Applications/Xcode_16.2.app/Contents/Developer
+        run: sudo xcode-select -s /Applications/Xcode_16.4.app/Contents/Developer
 
       - name: Build
         run: |
